# spectra

./: .gitignore  CMakeLists.txt
include/Spectra/contrib/: LOBPCGSolver.h
wasm/: CMakeLists.txt  bindings.cpp  build.sh  docker-build.sh  example.mjs  spectra.mjs
